# yazi

yazi-actor/src/mgr/bulk_rename/counters/: geneal.rs  roman.rs
yazi-adapter/: Cargo.toml
yazi-adapter/src/: adapter.rs  lib.rs  office.rs  pdf.rs
yazi-adapter/src/drivers/: chafa.rs  iip.rs  kgp.rs  kgp_old.rs  sixel.rs  ueberzug.rs
yazi-adapter/src/pdf/: font_mem_source.rs  fontique_src.rs
yazi-config/preset/: yazi-default.toml
yazi-plugin/preset/plugins/: pdf-hayro.lua  pdf-pdfium.lua  pdf2.lua  poppdf.lua
yazi-plugin/src/loader/: loader.rs
yazi-plugin/src/utils/: image.rs  mod.rs  pdf.rs  utils.rs
yazi-shared/src/path/: dyn.rs  path.rs
