[package]
name        = "yazi-adapter"
version     = "25.4.8"
edition     = "2021"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi image adapter"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[dependencies]
yazi-config = { path = "../yazi-config", version = "25.4.8" }
yazi-macro  = { path = "../yazi-macro", version = "25.4.8" }
yazi-shared = { path = "../yazi-shared", version = "25.4.8" }

# External dependencies
ansi-to-tui = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }
color_quant = "1.1.0"
crossterm   = { workspace = true }
image       = { version = "0.25.6", default-features = false, features = [ "avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "webp" ] }
ratatui     = { workspace = true }
scopeguard  = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
twox-hash   = { workspace = true }
# pdfium-render = { version = "0.8.30", features = [ "static", "thread_safe" ] }
# poppler-rs = { path = "D:/Rust/poppler-rs/poppler", default-features = false, features = ["v23_8"] }
office-convert-client = "0.2.0"
libreofficekit = "0.4.0"
rand = "0.9.0"
cairo-rs = "0.20.7"
poppler-rs = "0.24.1"

# [dependencies.cairo-sys-rs]
# version = "0.21"
# branch = "main"
# git = "https://github.com/gtk-rs/gtk-rs-core"

# [dependencies.mupdf]
# git = "https://github.com/messense/mupdf-rs.git"
# branch = "main"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
