[package]
name        = "yazi-adapter"
version     = "25.9.15"
edition     = "2024"
license     = "MIT"
authors     = [ "sxyazi <sxyazi@gmail.com>" ]
description = "Yazi image adapter"
homepage    = "https://yazi-rs.github.io"
repository  = "https://github.com/sxyazi/yazi"

[dependencies]
yazi-config = { path = "../yazi-config", version = "25.9.15" }
yazi-fs     = { path = "../yazi-fs", version = "25.9.15" }
yazi-macro  = { path = "../yazi-macro", version = "25.9.15" }
yazi-shared = { path = "../yazi-shared", version = "25.9.15" }
yazi-term   = { path = "../yazi-term", version = "25.9.15" }

# External dependencies
ansi-to-tui = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }
crossterm   = { workspace = true }
image       = { version = "0.25.8", default-features = false, features = [ "avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "webp" ] }
palette     = { version = "0.7.6", default-features = false }
quantette   = { version = "0.3.0", default-features = false }
ratatui     = { workspace = true }
scopeguard  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
pdfium-render = { version = "0.8.35", features = ["sync"] }
hayro = { git = "https://github.com/LaurenzV/hayro.git", rev = "f160d6dadc919e2b1cd2e8efe10ff65297c3b21b" }
fontique = { version = "0.6", features = ["system", "std"] }
memmap2 = "0.9.9"
color = "0.3.2"
bytemuck = "1.24.0"

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }
